--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,11 +1,17 @@
-<h1>All Listings</h1>
+<% if logged_in? %>
+    <h1> Market </h1>
 
-<% @listings.each do |listing| %>
-  <div>
-    <h2><%= listing.title %></h2>
-    <p><strong>Price:</strong> $<%= listing.price %></p>
-    <p><strong>Category:</strong> <%= listing.category %></p>
-    <p><strong>Description:</strong> <%= listing.description %></p>
-    <hr>
-  </div>
+    <% @listings.each do |listing| %>
+        <div class="listing">
+            <h2><%= listing.title %></h2>
+            <p><strong>Price:</strong> $<%= listing.price %></p>
+            <p><strong>Category:</strong> <%= listing.category %></p>
+            <p><strong>Location:</strong> <%= listing.location %></p>
+            <hr>
+        </div>
+    <% end %>
+    
+    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
+<% else %>
+  <p>Please log in to view the marketplace.</p>
 <% end %>
