Changed USF Logo on profile image to Profile Logo

--- a/app/views/pages/temp.html.erb
+++ b/app/views/pages/temp.html.erb
@@ -20,7 +20,7 @@
     </div>
     <div class="header-right">
       <div class="header-profile">
-        <a href="/profile"> <%= image_tag "default-profile.png", alt: "USF Logo", class: "profile-click" %> </a>
+        <a href="/profile"> <%= image_tag "default-profile.png", alt: "Profile Logo", class: "profile-click" %> </a>
       </div>
       <div class="header-logout">
         <%= button_to "Logout", logout_path, method: :delete, class: "logout-button" %>
