--- a/app/assets/stylesheets/pages/temp.css
+++ b/app/assets/stylesheets/pages/temp.css
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
 }
 
 .header-logo {
@@ -17,12 +18,16 @@ body {
 }
 
 .header-middle {
-  display: flex;
-  flex: 1;
-  min-width: 150px;
-  height: 60px;
-  justify-content: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   white-space: nowrap;
+  text-align: center;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-text {
