--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= yield :stylesheets %>
     <%= javascript_importmap_tags %>
+
+    <!-- link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" data-turbo-track="reload"-->
   </head>
 
   <body>
