--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,12 +1,20 @@
-
 <% if logged_in? %>
-    <h1><%= @listing.title %></h1>
-    <p><%= @listing.description %></p>
-    <p>Price: $<%= @listing.price %></p>
+  <h1><%= @listing.title %></h1>
 
-    <%= link_to 'Back to Listings', listings_path %>
-    <hr>
-    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
+  <p><strong>Description:</strong> <%= @listing.description %></p>
+  <p><strong>Price:</strong> $<%= @listing.price %></p>
+  <p><strong>Category:</strong> <%= @listing.category %></p>
+  <p><strong>Location:</strong> <%= @listing.location %></p>
+
+  <p><strong>Posted by:</strong> <%= @listing.user.username %></p>
+
+  <%= link_to "Message Seller", new_message_path(recipient_id: @listing.user.id), class: "btn btn-primary" %>
+
+  <hr>
+
+  <%= link_to 'Back to Listings', listings_path, class: "btn btn-secondary" %>
+
+  <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
 <% else %>
   <p>Please log in to view the marketplace.</p>
 <% end %>
