--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -19,6 +19,9 @@
       </p>
     </div>
     <div class="header-right">
+      <div class="header-messages">
+        <%= link_to "Messages", unified_messages_path, class: "logout-button" %>
+      </div>
       <div class="header-profile">
         <a href="/profile"> <%= image_tag "default-profile.png", alt: "Profile Logo", class: "profile-click" %> </a>
       </div>
@@ -54,7 +57,6 @@
             </div>
         <% end %>
     </div>
-  
 
 <% else %>
   <p>Please log in to view the marketplace.</p>
