--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,15 +1,20 @@
-<h1>Send a Message</h1>
+<h1 class="show-title">Send a Message</h1>
 
-<%= form_with model: @message, local: true do |form| %>
-  <p>
-    To: <%= @recipient.username %>
-    <%= form.hidden_field :recipient_id, value: @recipient.id %>
-  </p>
+<div class="message-form-container">
+  <%= form_with model: @message, local: true do |form| %>
+    <div class="form-group">
+      <label>To: <%= @recipient.username %></label>
+      <%= form.hidden_field :recipient_id, value: @recipient.id %>
+    </div>
 
-  <p>
-    <%= form.label :body, "Message" %><br>
-    <%= form.text_area :body %>
-  </p>
+    <div class="form-group">
+      <%= form.label :body, "Message" %>
+      <%= form.text_area :body, class: "form-control" %>
+    </div>
 
-  <%= form.submit "Send" %>
-<% end %>
+    <div class="form-buttons">
+      <%= link_to "Back to Home", listings_path, class: "btn btn-secondary back-button" %>
+      <%= form.submit "Send", class: "btn btn-success send-button" %>
+    </div>
+  <% end %>
+</div>
