--- a/app/assets/stylesheets/pages/signup.css
+++ b/app/assets/stylesheets/pages/signup.css
@@ -95,6 +95,13 @@ body {
   align-content: center;
 }
 
+.signup-button:hover {
+  color: blue;
+  font-weight: bold;
+  font-size: 15px;
+  border-width: 3px;
+}
+
 .to-login-text {
   color: gold;
   font-size: medium;
