--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -31,17 +31,20 @@
     </div>
   </div>
   <%# END OF HEADER! %>
-
+ 
   <% if logged_in? %>
     
 
-    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-danger" %>
+    
     
 
     <div class="market-header">
         <h1> Market </h1>
-    </div>
 
+    </div>
+    <div>
+      <%= button_to "Sell My Stuff", new_listing_path, method: :get, class: "btn btn-primary", style: "display: block; margin: 20px auto;" %>
+    </div>
     <div class="listings-all">
         <% @listings.each do |listing| %>
             <div class="listing">
