--- a/app/assets/stylesheets/pages/profile.css
+++ b/app/assets/stylesheets/pages/profile.css
@@ -42,7 +42,7 @@
     border-color: black;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
-    background-color: #006470;
+    background-color: #06593f;
     color: white;
 }
 
@@ -62,8 +62,8 @@
 }
 
 .profile-edit-button {
-    background-color: #F1C40F;
-    color: black;
+    background-color: #06593f;
+    color: rgb(255, 255, 255);
     width: 25% auto;
     padding: 15px;
     border-radius: 15px;
@@ -71,18 +71,20 @@
     cursor: pointer;
     margin-top: 50px;
     align-content: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .profile-edit-button:hover {
-    color: blue;
+    color: rgb(0, 179, 255);
     font-weight: bold;
     font-size: 15px;
     border-width: 3px;
 }
 
+
 .to-profile-button {
-    background-color: #F1C40F;
-    color: black;
+    background-color: #06593f;
+    color: rgb(255, 255, 255);
     width: 25% auto;
     padding: 15px;
     border-radius: 15px;
@@ -90,10 +92,11 @@
     cursor: pointer;
     margin-top: 30px;
     align-content: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .to-profile-button:hover {
-    color: blue;
+    color: rgb(0, 179, 255);
     font-weight: bold;
     font-size: 15px;
     border-width: 3px;
