--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,30 +1,73 @@
-<h1>Edit Listing</h1>
+<!DOCTYPE html>
 
-<%= form_with(model: @listing, local: true) do |form| %>
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
-
-  <p>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %>
-  </p>
-
-  <p>
-    <%= form.label :price %><br>
-    <%= form.number_field :price, step: 0.01 %>
-  </p>
-
-  <p>
-    <%= form.label :category %><br>
-    <%= form.text_field :category %>
-  </p>
-
-  <p>
-    <%= form.label :location %><br>
-    <%= form.text_field :location %>
-  </p>
-
-  <%= form.submit "Update Listing" %>
+<% content_for :stylesheets do %>
+<%= stylesheet_link_tag "pages/temp" %>
 <% end %>
+
+<head>
+</head>
+
+<body>
+  <%# !START OF HEADER %>
+  <div class="header">
+    <div class="header-logo">
+      <%= image_tag "usf-logo.png", alt: "USF Logo", class: "header-logo" %>
+    </div>
+    <div class="header-middle">
+      <p class="header-text">
+        Stampede
+      </p>
+    </div>
+    <div class="header-right">
+      <div class="header-messages">
+        <%= link_to "Messages", unified_messages_path, class: "logout-button" %>
+      </div>
+      <div class="header-profile">
+        <a href="/profile"> <%= image_tag "default-profile.png", alt: "Profile Logo", class: "profile-click" %> </a>
+      </div>
+      <div class="header-logout">
+        <%= button_to "Logout", logout_path, method: :delete, class: "logout-button" %>
+      </div>
+    </div>
+  </div>
+  <%# END OF HEADER! %>
+
+
+  <h1 class="edit-listing">Edit Listing</h1>
+
+  <div class="edit-container">
+    <%= form_with(model: @listing, local: true) do |form| %>
+      <div class="edit-labels">
+        <%= form.label :title %>
+        <%= form.text_field :title %>
+      </div>
+
+      <div class="edit-labels">
+        <%= form.label :description %>
+        <%= form.text_area :description, style: "width: 98%; min-height: 60px;"%>
+      </div>
+
+      <div class="edit-labels">
+        <%= form.label :price %>
+        <%= form.number_field :price, step: 0.01 %>
+      </div>
+
+      <div class="edit-labels">
+        <%= form.label :category %>
+        <%= form.text_field :category %>
+      </div>
+
+      <div class="edit-labels">
+        <%= form.label :location %>
+        <%= form.text_field :location %>
+      </div>
+
+      <%= form.submit "Update", class: "btn btn-secondary update-btn" %>
+    <% end %>
+  </div>
+
+  <div>
+    <hr style="visibility: hidden;">
+  </div>
+
+  </body>
