--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -35,16 +35,16 @@
   <% if logged_in? %>
     
 
-    
-    
-
     <div class="market-header">
         <h1> Market </h1>
+    </div>
 
-    </div>
     <div>
-      <%= button_to "Sell My Stuff", new_listing_path, method: :get, class: "btn btn-primary", style: "display: block; margin: 20px auto;" %>
+      <%= button_to "Sell My Stuff", new_listing_path, method: :get, class: "btn btn-primary show-message-button", style: "display: block; margin: 20px auto; width: 20%; border: 1px solid #054631;" %>
+      <hr style="visibility: hidden;">
+      <hr style="visibility: hidden;">
     </div>
+
     <div class="listings-all">
         <% @listings.each do |listing| %>
             <div class="listing">
