--- a/app/views/pages/editprofile.html.erb
+++ b/app/views/pages/editprofile.html.erb
@@ -20,6 +20,9 @@
     </div>
     <div class="header-right">
       <div class="header-profile">
+        <a href="/messages/unified"> <%= image_tag "message-logo.png", alt: "Message Logo", class: "profile-click" %> </a>
+      </div>
+      <div class="header-profile">
         <a href="/profile"> <%= image_tag "default-profile.png", alt: "Profile Logo", class: "profile-click" %> </a>
       </div>
       <div class="header-logout">
