--- a/app/views/messages/unified.html.erb
+++ b/app/views/messages/unified.html.erb
@@ -19,8 +19,8 @@
       </p>
     </div>
     <div class="header-right">
-      <div class="header-messages">
-        <%= link_to "Messages", unified_messages_path, class: "logout-button" %>
+      <div class="header-profile">
+        <a href="/messages/unified"> <%= image_tag "message-logo.png", alt: "Message Logo", class: "profile-click" %> </a>
       </div>
       <div class="header-profile">
         <a href="/profile"> <%= image_tag "default-profile.png", alt: "Profile Logo", class: "profile-click" %> </a>
@@ -31,6 +31,17 @@
     </div>
   </div>
   <%# END OF HEADER! %>
+
+  <% if flash[:notice] %>
+    <div class="flash-message notice">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div class="flash-message alert">
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
 
   <div class="market-header">
     <h1 class="show-title">Messages</h1>
