--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -42,6 +42,30 @@
         <%= form.text_field :title, style: "width: 97%" %>
       </div>
 
+      <% if @listing.image.attached? %>
+        <div class="image-wrapper">
+            <%= image_tag @listing.image, alt: "Image of #{@listing.title}", class: "show-image" %>
+        </div>
+      <% else %>
+          <p>No image uploaded.</p>
+      <% end %>
+      <br>
+
+      <% if @listing.errors.any? %>
+        <div class="error_messages">
+          <ul>
+            <% @listing.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="edit-labels">
+        <%= form.label :image %>
+        <%= form.file_field :image %>
+      </div>
+
       <div class="edit-labels">
         <%= form.label :description %>
         <%= form.text_area :description, style: "width: 97%; min-height: 60px;"%>
