--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -49,7 +49,14 @@
         <% @listings.each do |listing| %>
             <div class="listing">
                 <%= link_to listing_path(listing) do %>
-                    <h2 class="listing-title"><%= listing.title %></h2>
+                    <h6 class="listing-title"><%= listing.title %></h6>
+                    <% if listing.image.attached? %>
+                      <div class="image-wrapper">
+                        <%= image_tag listing.image, alt: "Image of #{listing.title}", class: "show-image" %>
+                      </div>
+                    <% else %>
+                      <p>No image uploaded.</p>
+                    <% end %>
                     <p class="listing-tag"><strong>Price:</strong> $<%= listing.price %></p>
                     <p class="listing-tag"><strong>Category:</strong> <%= listing.category %></p>
                     <p class="listing-tag"><strong>Location:</strong> <%= listing.location %></p>
