--- a/app/assets/stylesheets/listings/index.css
+++ b/app/assets/stylesheets/listings/index.css
@@ -66,12 +66,15 @@
     text-decoration: none;
     text-align: center;
     font-size: 36px;
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 .listing-title a {
     color: inherit;
     text-decoration: none;
 }
+
 
 .listing-buttons {
     display: flex;
