--- a/app/views/messages/unified.html.erb
+++ b/app/views/messages/unified.html.erb
@@ -53,7 +53,7 @@
   <% if @received_messages.any? %>
     <% @received_messages.each do |message| %>
       <div class="message-card message-received">
-        <p><strong>From:</strong> <%= message.sender.username %></p>
+        <p><strong>From:</strong> <%= message.sender.displayname %></p>
         <p><%= message.body %></p>
         <p><em>Received at: <%= message.created_at.strftime("%b %d, %Y %H:%M") %></em></p>
       </div>
@@ -66,7 +66,7 @@
   <% if @sent_messages.any? %>
     <% @sent_messages.each do |message| %>
       <div class="message-card message-sent">
-        <p><strong>To:</strong> <%= message.recipient.username %></p>
+        <p><strong>To:</strong> <%= message.recipient.displayname %></p>
         <p><%= message.body %></p>
         <p><em>Sent at: <%= message.created_at.strftime("%b %d, %Y %H:%M") %></em></p>
       </div>
