--- a/app/assets/stylesheets/mesages.css
+++ b/app/assets/stylesheets/mesages.css
@@ -85,6 +85,20 @@
     background-color: dodgerblue;
 }
 
+.reply-button {
+    background-color: #006747;
+    color: white;
+    margin-top: 30px;
+    border-radius: 5px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.reply-button:hover {
+    background-color: dodgerblue;
+}
+
 .message-titles {
     padding-top: 40px;
     text-align: center;
