--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -41,7 +41,12 @@
   <div class="message-form-container">
     <%= form_with model: @message, local: true do |form| %>
       <div class="form-group">
-        <label>To: <%= @recipient.displayname %></label>
+        <label><strong>Listing:</strong> <%= @listing.title %></label>
+        <%= form.hidden_field :listing_id, value: @listing.id %>
+      </div>
+
+      <div class="form-group">
+        <label><strong>To:</strong> <%= @recipient.displayname %></label>
         <%= form.hidden_field :recipient_id, value: @recipient.id %>
       </div>
 
