--- a/app/views/messages/unified.html.erb
+++ b/app/views/messages/unified.html.erb
@@ -53,9 +53,19 @@
   <% if @received_messages.any? %>
     <% @received_messages.each do |message| %>
       <div class="message-card message-received">
+        <% if message.listing.present? %>
+          <p><strong>Listing: </strong> <%= link_to message.listing.title, listing_path(message.listing) %> </p>
+        <% else %>
+          <p><strong>Listing: </strong> Listing not available </p>
+        <% end %>
         <p><strong>From:</strong> <%= message.sender.username %></p>
         <p><%= message.body %></p>
         <p><em>Received at: <%= message.created_at.strftime("%b %d, %Y %H:%M") %></em></p>
+        <% if message.listing.present? %>
+          <div class="margin-t-lg">
+            <%= link_to "Reply", new_message_path(recipient_id: message.sender.id, listing_id: message.listing_id), class: "btn btn-success back-button" %>
+          </div>
+        <% end %>
       </div>
     <% end %>
   <% else %>
@@ -66,6 +76,11 @@
   <% if @sent_messages.any? %>
     <% @sent_messages.each do |message| %>
       <div class="message-card message-sent">
+        <% if message.listing.present? %>
+          <p><strong>Listing: </strong> <%= link_to message.listing.title, listing_path(message.listing) %> </p>
+        <% else %>
+          <p><strong>Listing: </strong> Listing not available </p>
+        <% end %>
         <p><strong>To:</strong> <%= message.recipient.username %></p>
         <p><%= message.body %></p>
         <p><em>Sent at: <%= message.created_at.strftime("%b %d, %Y %H:%M") %></em></p>
