spacing vertically on viewing listings

--- a/app/assets/stylesheets/listings/show.css
+++ b/app/assets/stylesheets/listings/show.css
@@ -8,6 +8,11 @@
     margin-top: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
+    /* center of screen vertically */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* Title styling */
